# yral-metadata

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix  fly.toml
.devcontainer/nix/: devcontainer.json
.direnv/: flake-profile-7-link
.github/workflows/: add_pull_request_to_project.yaml  build.yml  deploy-fly.yml  deploy-hetzner.yml  deploy-preview.yml  deploy.yml  project_workflow.yml  rotate-ssh.yml  update_secrets.yml  upload-secrets-to-vault.yml
client/: Cargo.toml
client/src/: consts.rs  lib.rs
deploy/: Caddyfile  Dockerfile  docker-compose.yml
deploy/fly-redis-proxy/: Dockerfile  entrypoint.sh  fly_redis_proxy.exp
server/: Cargo.toml
server/src/: api.rs  auth.rs  config.rs  consts.rs  dragonfly.rs  error.rs  main.rs  notification_mocks.rs  notifications.rs  notifications_test.rs  qstash.rs  sentry_helpers.rs  sentry_middleware.rs  sentry_utils.rs  session.rs  signup.rs  state.rs  test_utils.rs
server/src/admin/: mod.rs
server/src/api/: handlers.rs  implementation.rs  mod.rs  store.rs  tests.rs
server/src/firebase/: mod.rs  notifications.rs
server/src/kyc/: mod.rs  store.rs
server/src/middleware/: mod.rs  sentry_scrub.rs
server/src/notifications/: mocks.rs  mod.rs  tests.rs  trait_impls.rs  traits.rs
server/src/services/: error_wrappers.rs  mod.rs  openapi.rs
server/src/utils/: canister.rs  error.rs  mod.rs  yral_auth_jwt.rs
types/: Cargo.toml
types/src/: error.rs  lib.rs
