[workspace]
members = [ "client","server", "types"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
candid = "0.10.11"
log = "0.4.21"
yral-identity = { git = "https://github.com/yral-dapp/yral-identity.git", default-features = false, rev = "7e7a97826a34bdf44415232167b9f896da6ba4e2" }
