[workspace]
members = ["client", "server", "types"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0.58"
candid = "0.10.6"
log = "0.4.21"
yral-identity = { git = "https://github.com/yral-dapp/yral-identity.git", default-features = false, rev = "156bc0e7a4bc3d9a3b4faab4b9b3048e88a0c701" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
] }
serde_json = "1.0.115"
yral-types = { git = "https://github.com/yral-dapp/yral-common.git", branch = "master" }
k256 = "0.13.4"
ic-agent = "0.38.1"