[workspace]
members = ["client", "server", "types"]
resolver = "2"

[workspace.dependencies]
serde = { version = "^1.0.128", features = ["derive"] }
thiserror = "1.0.58"
candid = "^0.10.10"
log = "0.4.21"
yral-identity = { git = "https://github.com/dolr-ai/yral-common.git", default-features = false, branch = "master" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
] }
serde_json = "1.0.115"
ic-agent = { version = "0.41.0", default-features = false, features = ["pem"]}
chrono = "0.4"
