[package]
name = "yral-metadata-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.0", features = ["macros", "json"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tokio = { version = "1.36.0", features = ["full"] }
sentry-tower = { version = "0.37.0", features = ["axum", "axum-matched-path"] }

serde.workspace = true
email_address = "0.2.9"
types = { path = "../types", package = "yral-metadata-types" }
redis = { version = "1.0.2", features = [
    "tokio-rustls-comp",
    "aio",
    "ahash",
    "connection-manager",
    "cluster",
    "cluster-async",
    "acl",
    "sentinel"
] }
config = { version = "0.14.0", features = ["toml"] }
serde_with = "3.7.0"
serde_json.workspace = true
thiserror.workspace = true
candid.workspace = true
log.workspace = true
chrono.workspace = true
env_logger = "0.11.3"
bb8 = "0.9.1"
bb8-redis = "0.26.0"
yral-identity = { workspace = true, default-features = false, features = [
    "ic-git",
] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
base64 = "0.22"
sha2 = "0.10"
futures = "0.3.30"
once_cell = "1.19.0"
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "http2",
    "rustls-tls",
] }
yup-oauth2 = "12.1.0"
hyper-util = { version = "0.1.10", features = ["client", "client-legacy"] }
hyper-rustls = { version = "0.27.5", features = [
    "http2",
    "webpki-roots",
    "ring",
] }
rustls = { version = "0.23.26" }
yral-canisters-client = {git = "https://github.com/dolr-ai/yral-common.git", branch = "master", features = ["individual-user", "user-index", "user-info-service", "platform-orchestrator"]}
yral-types = {git = "https://github.com/dolr-ai/yral-common.git", branch = "master"}
ic-agent.workspace = true
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = { version = "9.0.2", features = ["reqwest", "axum"]}
regex = "1.11.1"
elsa = "1.11.2"
sentry = { version = "0.37.0", default-features = false, features = [
    "rustls",
    "sentry-anyhow",
    "serde_json",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "release-health",
    "reqwest",
] }
sentry-tracing = "0.37.0"
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
k256 = "0.13"
rand = "0.8"
