[package]
name = "yral-metadata-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
candid.workspace = true 
thiserror.workspace = true
chrono.workspace = true
yral-identity = { workspace = true, default-features = false }
serde_json.workspace = true
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = { version = "9.0.2" }